fixed loading on mobile

--- a/custom-components/CustomLoader.module.scss
+++ b/custom-components/CustomLoader.module.scss
@@ -44,6 +44,11 @@
   line-height: 1.2;
   font-size: calc(var(--font-size) * 0.8);
   text-align: left;
+
+  @media (max-width: 768px) {
+    font-size: calc(var(--font-size) * 0.4);
+    line-height: 1;
+  }
 }
 
 .prompt {
@@ -54,6 +59,12 @@
   color: var(--theme-foreground);
   animation: fadeIn 0.5s ease-out;
   z-index: 2;
+
+  @media (max-width: 768px) {
+    font-size: calc(var(--font-size) * 1);
+    bottom: 1rem;
+    left: 1rem;
+  }
 }
 
 @keyframes fadeIn {
